bin/testsuite/tests/compiler/src/errors/compiler48.swg
#global testerror "Err0232"

namespace A
{
    namespace B
    {
        var a: bool
    }
}

namespace A
{
    namespace B
    {
        var a: bool
    }
}
